flux/apps/kroki/app/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kroki
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Apps"
    gethomepage.dev/name: Kroki
    gethomepage.dev/icon: kroki.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=kroki"
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - kroki.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kroki
          port: 8000
          weight: 1
